--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
           </div>
         </div>
       </div>
-      <a href="javascript:void(0)" class="button">Button</a>
-      <a href="javascript:void(0)" class="button1">Button</a>
-      <a href="javascript:void(0)" class="button2">Button</a>
+     <div class="buttons"><a href="javascript:void(0)" class="confirm">Button Test only</a>
+      <a href="javascript:void(0)" class="warning">Button</a>
+      <a href="javascript:void(0)" class="alert">Button</a></div> 
+
+    <span class="samplefont">This Is font check only</span>
      
 </body>
 </html>
